fix: scheduleDTO에서 userID 삭제
